# kinexus-ai

./: .env.example  .gitignore  .python-version  AI_DOCUMENT_MANAGEMENT_PHILOSOPHY.md  APPROVAL_WORKFLOW.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SETUP.md  DOCUMENTATION_STRUCTURE.md  GITHUB_SECRETS_SETUP.md  HACKATHON_PRESENTATION.md  LICENSE  MVP_README.md  README.DEV.md  README.md  alembic.ini  cdk.json  check-ci.sh  deploy.py  deploy_enhanced_lambda.py  deploy_frontend.py  deploy_lambda.py  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  quick-start.sh  requirements-graphrag.txt  requirements-lambda.txt  requirements-prod.txt  requirements.txt  test_deployment.py  test_enhanced_agentic_ai.py  update_permissions.py
.claude/: settings.local.json
.github/workflows/: dev.yaml  documentation-sync.yml  kinexus-documentation.yml
.kinexus/: config.yaml
alembic/: env.py
alembic/versions/: 20241010_01_add_documentation_plan_table.py  acdfb8332457_initial_schema_with_users_documents_.py
docker/: Dockerfile.agent-base  Dockerfile.agent-base.prod  Dockerfile.api  Dockerfile.api.prod  Dockerfile.change-analyzer  Dockerfile.content-creator  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.frontend.prod  Dockerfile.graphrag  Dockerfile.mock-bedrock  Dockerfile.orchestrator  Dockerfile.quality-controller  Dockerfile.web-automator  env-setup.sh  nginx.conf
docker/mock-bedrock/: mock_bedrock_service.py  requirements.txt
docs/: API_REFERENCE.md  BUSINESS_CASE.md  DEVELOPMENT_GUIDE.md  README.md  SECURITY.md  administration.md  api-reference.md  architecture.md  atlassian-setup-guide.md  aws-deployment-setup.md  crag-system.md  deployment.md  development.md  documentation-workflow.md  getting-started.md  github-actions-deployment.md  github-actions.md  image-analysis-framework.md  integration-configuration.md  integration-troubleshooting.md  integrations.md  operations.md  progress.md  security.md  testing.md
docs/archive/: SYSTEM_ARCHITECTURE_v1_20250927.md
docs/archive/legacy/: ADMIN_SYSTEM_README.md  ARCHITECTURE_V2.md  (+8 more)
docs/local-dev-stack/: README.md  administration.md  api-reference.md  crag-system.md  development.md  image-analysis-framework.md  integrations.md  operations.md  progress.md  security.md  testing.md
frontend/: index.html  package.json
frontend/src/: App.complex.tsx  App.tsx  index.css
infrastructure/: app.py  production_stack.py  requirements.txt
scripts/: aws-setup-permissions.sh  build-layer.sh  configure-approval-webhook.sh  configure-jira-webhook.sh  create-ecr-repos.sh  deploy-aws.sh  deploy.sh  dev-down.sh  dev-setup.sh  dev-test.sh  health-check.sh  init-db.sql  setup-dev.sh  setup_admin_system.py  setup_database.py  start-api.sh  start-frontend.sh  test-api.py  test_websocket.html
src/: api_client.py
src/agents/: agentic_rag_system.py  crag_integration.py  image_analysis_framework.py  image_analysis_integration.py  multi_agent_supervisor.py  nova_act_automation.py  nova_pro_integration.py  parallel_platform_updater.py  performance_tracking_system.py  persistent_memory_system.py  react_reasoning_agent.py  self_corrective_rag.py
src/api/: __init__.py  dependencies.py  main.py
src/config/: crag_config.py  mcp_config.py  model_config.py
src/core/: __init__.py  config.py  websocket_manager.py
src/database/: __init__.py  connection.py  models.py
src/integrations/: base_integration.py  confluence_client.py  github_actions_integration.py  github_client.py  github_integration.py  jira_integration.py  mcp_client.py  mcp_server.py  monday_integration.py  servicenow_integration.py  sharepoint_client.py  sharepoint_integration.py
src/lambdas/: approval_handler.py  diff_generator.py  document_manager.py  document_orchestrator.py  document_orchestrator_v2.py  document_processor_v2.py  enhanced_orchestrator.py  github_webhook_handler.py  github_webhook_handler_v2.py  jira_webhook_handler.py  review_ticket_creator.py
tests/: run_all_tests.py  test_crag_system.py  test_image_analysis.py  test_lambda_deployment.py  test_mcp_integration.py  test_metrics_service.py  test_model_integration.py  test_webhook.py
(+55 files in other folders)
